--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = https://github.com/cu-ecen-aeld/assignment-autotest.git
 [submodule "poky"]
 	path = poky
-	url = https://git.yoctoproject.org/cgit/cgit.cgi/poky/
+	url = git://git.yoctoproject.org/poky/
+	branch = kirkstone
